--- a/README
+++ b/README
@@ -1,3 +1,4 @@
+copy from 17462@svn://svn.code.sf.net/p/dekiwiki/code/deki
 README: MindTouch
 
 Thank you for your interest in MindTouch. You can find out more about 
